syntax = "proto3";

package deployments.v1.instances.v1;

import "component/v1/component.proto";
import "executors/v1/plan/v1/plan_ref.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

// ProvisionRequest is a child workflow request for the deployments phase
message ProvisionRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
  string deployment_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];

  repeated string install_ids = 4 [(validate.rules).repeated.min_items = 1];

  component.v1.Component component = 5;

  string deployment_prefix = 6 [
    (validate.rules).string.min_len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
  bool plan_only = 7 [(tagger.tags) = "faker:\"-\""];
  .executors.v1.plan.v1.PlanRef build_plan = 8;
}

// ProvisionResponse is a child workflow response for the plan phase
message ProvisionResponse {
  repeated string workflow_ids = 1 [(validate.rules).repeated.min_items = 1];
}
